--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,15 @@ ul li{
   0px 14px 10px rgba(0,0,0,0.15),
   0px 24px 2px rgba(0,0,0,0.1),
   0px 34px 30px rgba(0,0,0,0.1);
+  transition: letter-spacing 3s;
+  transition: left 0.8s;
+  transition-timing-function: linear;
+}
+
+.myname:hover{
+  letter-spacing: 20px;
+  left: 750px;
+
 }
 .clock{
   width: 180px; 
@@ -55,42 +64,6 @@ box-shadow: -2px 5px 14px -3px rgba(0,0,0,0.75);
   left: 0px;
   top: 0px;
 }
-
-/* .dot{
-  margin: 50px auto;
-  background:black;
-  width: 20px; 
-  height: 20px;
-  border-radius: 50%;
-} */
-
-/* .hour, .minute{
-  width: 35px;
-  height: 7px;
-  background: black;
-  border-radius: 90px;
-  position: relative;
-  top: -65px;
-  left: 25px;
-}
-
-.minute{
-  width: 50px;
-  top: -60px;
-  left: 58px;
-  transform: rotate(30deg);
-  border-radius: 90px;
-}
-
-.second{
-  width: 3px;
-  height: 45px;
-  position: relative;
-  top: -75px;
-  left: 58px;
-  background: #37721b;
-  border-radius: 90px;
-} */
 
 .shelf{
   width: 150px;
@@ -164,6 +137,7 @@ box-shadow: -5px 3px 14px -3px rgba(0,0,0,0.75);
  padding-left: 3px;
  
 }
+
 
 .book ul li:nth-child(2){
   top: -200px;
@@ -424,8 +398,11 @@ box-shadow: -5px 3px 14px -3px rgba(0,0,0,0.75);
   border-radius: 0 0 90px 90px;
   position: relative;
   top: -12px;
-  left: 37px;
+  left: 37px
 }
+
+
+
 
 .mouth:before, .mouth:after{
   content:'';
@@ -819,6 +796,7 @@ box-shadow: -3px 4px 14px -3px rgba(0,0,0,0.75);
   left: 12px;
 }
 
+
 .dog-eyes ul li:before{
   content: "";
   display: inline-block;
@@ -890,8 +868,18 @@ z-index: 1;
   top: -85px;
  left: 25px;
  border-radius: 0 0 50% 50%;
+ animation-name: dog-tongue;
+ animation-duration: 1s;
+ animation-iteration-count: infinite;
 }
 
+
+@keyframes dog-tongue{
+ 0% {height: 20px;}
+ 20% {height: 15px;}
+ 30% {height: 10px;}
+ 40% {height: 5px;}
+}
 .dog-body{
   width: 70px;
   height: 80px;
@@ -1095,13 +1083,81 @@ box-shadow: -3px 4px 14px -3px rgba(0,0,0,0.75);
 }
 
 .postits p{
-  /* font-family: 'Indie Flower', cursive;
-   */
    font-family: 'Cute Font', cursive;
   font-size: 30px;
   padding-top: 80px;
   font-weight: bold;
   color: #EB194B;
+}
+
+.flower{
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  animation: rotate-flower 8s infinite linear;
+  width: 90px;
+  height: 90px;
+}
+
+@keyframes rotate-flower{
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
+
+.middle{
+  width: 20px; 
+  height: 20px;
+  position: absolute;
+  left: 34px;
+  top: 29px;
+  background: #fc1;
+  border-radius: 50%;
+  z-index:1; 
+}
+
+.flower ul li {
+  position: absolute;
+  top: 17px;
+  left: 25px;
+  width: 25px;
+  height: 20px;
+  background:rgba(255, 87, 138, 0.7);
+  border-radius: 90px 50%;
+  transform: rotate(-90deg);
+
+}
+
+.flower ul li:nth-child(2){
+  transform: rotate(-15deg);
+  top: 18px;
+  left: 40px;
+}
+
+.flower ul li:nth-child(3){
+  top: 30px;
+left: 45px;
+transform: rotate(35deg);
+}
+.flower ul li:nth-child(4){
+  top: 42px;
+left: 39px;
+transform: rotate(85deg);
+}
+
+.flower ul li:nth-child(5){
+  top: 42px;
+  left: 24px;
+  transform: rotate(155deg);
+}
+
+.flower ul li:nth-child(6){
+  top: 29px;
+  left: 17px;
+  transform: rotate(35deg);
 }
 
 .post-it-1 p:hover, .post-it-2 p:hover, .post-it-3 p:hover, .post-it-4 p:hover{
