--- a/src/App.css
+++ b/src/App.css
@@ -1085,6 +1085,7 @@ box-shadow: -3px 4px 14px -3px rgba(0,0,0,0.75);
 .postits p{
    font-family: 'Cute Font', cursive;
   font-size: 30px;
+
   padding-top: 80px;
   font-weight: bold;
   color: #EB194B;
@@ -1170,12 +1171,12 @@ transform: rotate(95deg);
 
   width: 50px;
   height: 50px;
-  background: rgba(255, 140, 12, 0.3);
+  background: rgba(255, 140, 12, 0.5);
   border-radius: 100px 90px 100px 20px;
   transform: rotate(-45deg);
-  transition: background 2s;
+  transition: background 1s;
   transition: box-shadow 1s;
-  transition-timing-function: ease;
+  transition-timing-function: ease-in-out;
  
 }
 
@@ -1184,6 +1185,11 @@ transform: rotate(95deg);
   -webkit-box-shadow: -3px -4px 30px 12px rgba(211,219,96,1);
 -moz-box-shadow: -3px -4px 30px 12px rgba(211,219,96,1);
 box-shadow: -3px -4px 30px 12px rgba(211,219,96,1);
+}
+
+.lamb-inside{
+  width: 0px;
+  height: 0px;
 }
 
 
@@ -1195,10 +1201,13 @@ box-shadow: -3px -4px 30px 12px rgba(211,219,96,1);
   height: 80px;
   border-width: 1px;
   border-style: solid;
-  border-color: rgba(255, 244, 172) transparent transparent transparent;
+  border-color: rgba(0,0,0, 0.5) transparent transparent transparent;
   transform: rotate(45deg);
   border-radius: 50%;
+  transition: border-color 1s;
+  transition-timing-function: ease-in-out;
 }
+
 
 .lamb-inside ul li:nth-child(1):before{
   position: absolute;
@@ -1208,7 +1217,7 @@ box-shadow: -3px -4px 30px 12px rgba(211,219,96,1);
   display: inline-block; 
   width: 29px;
   height: 5px;
-  border-bottom: 1px solid rgba(255, 244, 172) ;
+  border-bottom: 1px solid rgba(0,0,0, 0.5) ;
   border-radius: 40px;
 }
 
@@ -1224,13 +1233,13 @@ box-shadow: -3px -4px 30px 12px rgba(211,219,96,1);
   content: "";
   display: inline-block; 
   height: 30px;
-  border-right: 1px solid rgba(255, 244, 172) ;
+  border-right: 1px solid rgba(0,0,0, 0.5);
 
   transform: rotate(-5deg);
 }
 
 .lamb-inside ul li:nth-child(2):after{
-  border-left: 1px solid rgba(255, 244, 172) ;
+  border-left: 1px solid rgba(0,0,0, 0.5) ;
   border-right: none;
   transform: rotate(7deg);
   left: 2px;
