--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ ul li{
 .myname{
   position: absolute;
   top: 20px;
-  left:1050px;
+  left:800px;
   font-family: 'Parisienne', cursive;
   font-size: 45px;
   font-weight: bold;
@@ -35,14 +35,13 @@ ul li{
   0px 14px 10px rgba(0,0,0,0.15),
   0px 24px 2px rgba(0,0,0,0.1),
   0px 34px 30px rgba(0,0,0,0.1);
-  transition: letter-spacing 3s;
-  transition: left 0.8s;
+  transition: letter-spacing 1s;
+ 
   transition-timing-function: linear;
 }
 
 .myname:hover{
-  letter-spacing: 20px;
-  left: 750px;
+  letter-spacing: 18px;
 
 }
 .clock{
@@ -179,7 +178,7 @@ box-shadow: -5px 3px 14px -3px rgba(0,0,0,0.75);
   position: absolute;
   background: #f8da67;
   left: 330px;
-  top: 164px;
+  top: 160px;
   border-radius:90px 90px 35px 35px ;
 }
 
@@ -188,9 +187,9 @@ box-shadow: -5px 3px 14px -3px rgba(0,0,0,0.75);
   height: 135px;
   width: 100px;
   background: #dbaf9e;
-  position: relative;
-  left:300px;
-  top: 155px;
+  position: absolute;
+  left:350px;
+  top: 200px;
   border-radius: 0 0 60% 60%;
 }
 
@@ -199,9 +198,9 @@ box-shadow: -5px 3px 14px -3px rgba(0,0,0,0.75);
   display: inline-block;
   width: 60px;
   height: 40px;
-  top: 0px;
-  left: -25px;
-  position: relative;
+  top: -5px;
+  left: -8px;
+  position: absolute;
   background: #f8da67;
   border-radius: 0 0 100px 120px;
 }
@@ -210,11 +209,11 @@ box-shadow: -5px 3px 14px -3px rgba(0,0,0,0.75);
   content: "";
   display: inline-block;
   width: 50px;
-  height:45px;
+  height:40px;
   background: #f8da67;
   position: relative;
-  top: -140px;
-  left: 30px;
+  top: -100px;
+  left: 26px;
   border-radius: 0 0  90px 120px;
 }
 
@@ -225,15 +224,15 @@ box-shadow: -5px 3px 14px -3px rgba(0,0,0,0.75);
   border-color: #5A5353 transparent transparent transparent;
   border-width: 2px;
   position: relative;
-  top: 10px;
+  top: 40px;
   left: 15px;
   border-radius: 50%;
   
 }
 
 .right-eye-brow{
-  left: 63px;
-  top: 4px;
+  left: 62px;
+  top: 34px;
 }
 
 .left-eyelash ul li, .right-eyelash ul li{
@@ -242,7 +241,7 @@ box-shadow: -5px 3px 14px -3px rgba(0,0,0,0.75);
   border-left: 1px solid black;
   border-radius: 10px;
   position: relative;
-  top: -5px;
+  top: 27.7px;
   left: -21.5px;
   display: inline-block;
   transform: rotate(-10deg);
@@ -252,7 +251,7 @@ box-shadow: -5px 3px 14px -3px rgba(0,0,0,0.75);
   border-left: none;
   border-right: 1px solid black;
   transform: rotate(25deg);
-  top: -24px;
+  top: 9px;
   left: 25px;
 }
 
@@ -262,7 +261,7 @@ box-shadow: -5px 3px 14px -3px rgba(0,0,0,0.75);
   width: 16px; 
   height: 10px;
   position: relative;
-  top: -28px;
+  top: 5px;
   left: 22px;
   border-radius: 10% 50%;
   border-top: 2px solid black;
@@ -272,7 +271,7 @@ box-shadow: -5px 3px 14px -3px rgba(0,0,0,0.75);
 
 
 .right-eye{
-  top: -38px;
+  top: -5px;
   left: 65px;
   border-radius: 50% 10%;
   border-left: none;
@@ -285,9 +284,9 @@ box-shadow: -5px 3px 14px -3px rgba(0,0,0,0.75);
   width: 8px;
   height: 8px;
   background: #705840;
-  position: relative;
-  top: -12.5px;
-  left: 0px;
+  position: absolute;
+  top: 0px;
+  left: 3px;
   border-radius: 50%;
 
 }
@@ -310,9 +309,9 @@ box-shadow: -5px 3px 14px -3px rgba(0,0,0,0.75);
   height: 2px; 
   background: white;
   border-radius: 50%;
-  position: relative;
-  top: -13px;
-  left: -1px;
+  position: absolute;
+  top: 0px;
+  left: 1px;
 }
 
 .left-ear, .right-ear{
@@ -385,7 +384,7 @@ box-shadow: -5px 3px 14px -3px rgba(0,0,0,0.75);
   border-radius: 0 0 90px 90px;
   position: relative;
   left: 48px;
-  top: -24px;
+  top: 13px;
   
 }
 
@@ -397,7 +396,7 @@ box-shadow: -5px 3px 14px -3px rgba(0,0,0,0.75);
   width:30px;
   border-radius: 0 0 90px 90px;
   position: relative;
-  top: -12px;
+  top: 25px;
   left: 37px
 }
 
@@ -430,18 +429,18 @@ box-shadow: -5px 3px 14px -3px rgba(0,0,0,0.75);
   height: 20px;
   background:  #dbaf9e;
   z-index: 1;
-  position: relative;
-  left: 335px;
-  top:150px;
+  position: absolute;
+  left: 385px;
+  top:330px;
   border-radius: 0 0 15px 15px
 }
 
 .t-shirt{
   background: #DF3B57;
-  width: 120px;
+  width: 135px;
   height: 150px;
   position: absolute;
-  left: 340px;
+  left: 334px;
   top: 340px;
   z-index: -1;
   border-radius: 40px 40px 0 0;
@@ -481,9 +480,9 @@ box-shadow: -5px 3px 14px -3px rgba(0,0,0,0.75);
   height: 100px;
   padding-top: 10px;
   background:#BFC0C0;
-  position: relative;
-  left:275px;
-  top: 170px;
+  position: absolute;
+  left:330px;
+  top: 370px;
   box-shadow:
     inset 10px 0 50px rgb(70, 64, 70),
     inset -60px 0 120px rgb(153, 156, 156);
@@ -508,7 +507,7 @@ box-shadow: -5px 3px 14px -3px rgba(0,0,0,0.75);
   background: rgba(60,43,144, 0.1);
   position: absolute;
   left: 530px;
-  top: 420px;
+  top: 415px;
   border-radius: 0 0 10px 10px;
   border-width: 0 2px 2px 2px;
   border-style: solid;
@@ -608,9 +607,9 @@ box-shadow: -5px 3px 14px -3px rgba(0,0,0,0.75);
   /* background: #815136; */
   background-color: #d4bf82;
 background-image: url("https://www.transparenttextures.com/patterns/wood-pattern.png");
-  position: relative;
-  left: 90px;
-  top: 170px;
+  position: absolute;
+  left: 140px;
+  top: 470px;
   z-index: 1;
   -webkit-box-shadow: 0px 13px 10px -3px rgba(0,0,0,0.6);
   -moz-box-shadow: 0px 13px 10px -3px rgba(0,0,0,0.6);
@@ -700,9 +699,9 @@ box-shadow: 5px 14px 12px -3px rgba(0,0,0,0.6);
   display: inline-block;
    width: 20px;
    height: 15px;
-   position: relative;
+   position: absolute;
    top: 230px;
-   left: -200px;
+   left: 410px;
    background: black;
    border-radius: 5px;
    background: rgba(20,20,20,1);
@@ -717,7 +716,7 @@ box-shadow: 5px 14px 12px -3px rgba(0,0,0,0.6);
 }
 
 .table-front:after{
-  left: 200px;
+  left: 50px;
 }
 
 .garbage-can{
@@ -984,7 +983,7 @@ box-shadow: -3px 4px 14px -3px rgba(0,0,0,0.75);
  width: 50px;
  height: 3px;
  position: absolute;
- top: 472px;
+ top: 467px;
  left: 250px;
  border-radius: 50%;
  
@@ -996,7 +995,7 @@ box-shadow: -3px 4px 14px -3px rgba(0,0,0,0.75);
   width: 30px;
   position: absolute;
   z-index: 1;
-  top: 450px;
+  top: 445px;
   left: 260px;
   border-radius:5px 5px  10px 10px;
 }
@@ -1055,6 +1054,12 @@ box-shadow: -3px 4px 14px -3px rgba(0,0,0,0.75);
 
    
 
+}
+
+.postits{
+  position: absolute;
+  top: 0px;
+  left: 10px;
 }
 
 .post-it-2{
@@ -1482,6 +1487,14 @@ box-shadow: -3px -4px 30px 12px rgba(211,219,96,1);
   100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
 
+.css-art p{
+  font-size:13px;
+  font-family: 'Indie Flower', cursive;
+  position: relative;
+  left: 1210px;
+  top: 525px;
+  color: black;
+}
 
 
  .floor{
@@ -1640,3 +1653,60 @@ to {
   transform: rotate(360deg);
 }
 }
+
+@media screen and (max-width: 400px){
+  .floor{
+    width: 360%;
+  }
+
+  .myname{
+    position: absolute;
+    left: 1000px;
+    height: 15px;
+    width: 300px;
+  
+  }
+
+  .postits{
+    left: -60px;
+  }
+
+}
+
+
+/* @media screen and (max-width: 400px){
+
+.myname{
+  position: absolute;
+  left: 975px !important;
+  height: 15px;
+  width: 300px;
+
+}
+
+.postits{
+  left: -20px;
+}
+  
+}
+@media screen and (max-width: 500px){
+  .floor{
+    width: 200%;
+  }
+  
+  .postits{
+    right: 60px;
+  }
+
+  .css-art p{
+    
+    left: 1100px;
+  }
+
+  .myname{
+    position: relative;
+   left: 1000px;
+   top: -40px;
+  }
+  
+} */
