some responsive css is done

--- a/src/App.css
+++ b/src/App.css
@@ -1999,6 +1999,121 @@ to {
 
 }
 
+@media only screen and (min-width: 500px){
+  .floor{
+    top: 620px;
+    width: 240%;
+    left: 0;
+    height: 60vh;
+  }
+
+  .myname{
+     position: absolute;
+    left:1000px;
+      width: 300px;
+  
+  }
+
+  .postits{
+    left: -330px;
+    top:850px;
+  }
+
+  .post-it-1, .post-it-2, .post-it-3, .post-it-4{
+    width:500px;
+    height: 500px;
+    left: 500px;
+  }
+
+  .post-it-2{
+    left: 1100px;
+  }
+  
+  .post-it-3{
+    top: 700px;
+  }
+
+  .post-it-4{
+    left: 1100px;
+    top: 700px;
+  }
+
+  .post-it-1:after, .post-it-2:after, .post-it-3:after , .post-it-4:after{
+    content: "";
+    display: inline-block;
+    width: 500px;
+    height: 500px;
+    position: absolute;
+    top: -15px;
+    left: -1px;
+    z-index: -1;
+    box-shadow:2px 15px 5px rgba(0, 0, 0, 0.40);
+  }
+
+  .postits p{
+    padding-top: 200px;
+  }
+
+  .css-art p{
+    top: -140px;
+    left: 1450px;
+  }
+
+  .table{
+    left: 450px;
+  }
+
+  .table-front{
+    left: 460px;
+  }
+
+  .chair{
+    left: 600px;
+  }
+
+  .pencil-jar{
+    left: 850px;
+  }
+
+  .dog{
+    left: 950px;
+  }
+
+  .t-shirt{
+    left: 625px;
+  }
+
+  .head{
+    left: 640px;
+  }
+
+  .neck{
+    left: 675px;
+  }
+
+  .hair{
+    left: 620px;
+  }
+
+  .computer{
+    left: 620px;
+  }
+
+  .coffee{
+    left: 290px;
+  }
+
+  .garbage-can{
+    left: 350px;
+  }
+
+  .shelf{
+    left: 300px;
+  }
+
+}
+
+
 @media only screen and (min-width: 600px){
   .floor{
     top: 620px;
@@ -2114,16 +2229,12 @@ to {
 }
 
 
-
-
-
-
 @media only screen and (min-width: 700px){
   .floor{
     top: 620px;
     width: 190%;
     left: 0;
-    height: 20vh;
+    height: 40vh;
   }
 
   .myname{
@@ -2349,6 +2460,119 @@ to {
 }
 
 
+@media only screen and (min-height: 1000px){
+  .floor{
+    top: 620px;
+    width: 190%;
+    left: 0;
+    height: 20vh;
+  }
+
+  .myname{
+     position: absolute;
+    left:1550px;
+      width: 300px;
+  
+  }
+
+  .postits{
+    left: -300px;
+    top: 850px;
+  }
+
+  .post-it-1, .post-it-2, .post-it-3, .post-it-4{
+    width:500px;
+    height: 500px;
+    left: 500px;
+  }
+
+  .post-it-2{
+    left: 1100px;
+  }
+  
+  .post-it-3{
+    top: 700px;
+  }
+
+  .post-it-4{
+    left: 1100px;
+    top: 700px;
+  }
+
+  .post-it-1:after, .post-it-2:after, .post-it-3:after , .post-it-4:after{
+    content: "";
+    display: inline-block;
+    width: 500px;
+    height: 500px;
+    position: absolute;
+    top: -15px;
+    left: -1px;
+    z-index: -1;
+    box-shadow:2px 15px 5px rgba(0, 0, 0, 0.40);
+  }
+
+  .postits p{
+    padding-top: 200px;
+  }
+
+  .css-art p{
+    top: -140px;
+    left: 1450px;
+  }
+
+  .table{
+    left: 550px;
+  }
+
+  .table-front{
+    left: 560px;
+  }
+
+  .chair{
+    left: 700px;
+  }
+
+  .pencil-jar{
+    left: 950px;
+  }
+
+  .dog{
+    left: 1050px;
+  }
+
+  .t-shirt{
+    left: 725px;
+  }
+
+  .head{
+    left: 740px;
+  }
+
+  .neck{
+    left: 775px;
+  }
+
+  .hair{
+    left: 720px;
+  }
+
+  .computer{
+    left: 720px;
+  }
+
+  .coffee{
+    left: 390px;
+  }
+
+  .garbage-can{
+    left: 450px;
+  }
+
+  .shelf{
+    left: 400px;
+  }
+
+}
 @media only screen and (min-height: 1300px){
   .floor{
     top: 620px;
@@ -2463,8 +2687,3 @@ to {
 
 }
 
-/* @media only screen and (min-height: 1300px){
-  .floor{
-    height: 1500px;
-  }
-} */
